# integrum_v2

./: .cursorrules  .gitignore  AGENTS.md  MASTER_PROMPT.md  MISSION3.5_BLUEPRINT.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  fix_all_tests.py  fix_conftest.py  fix_syntax.py  fix_tests.py  patch_conftest.py  patch_models.py  plan_accion.md
apps/backend/: .dockerignore  .env.example  Caddyfile  Dockerfile  alembic.ini  app_visual.py  create_test_user.py  docker-compose.prod.yml  get_test_token.py  list_users.py  pyproject.toml  requirements.txt  reset_passwords.py  seed_traceability.py  synthetic_vault.json
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 6df267294a99_add_missing_clinical_fields.py  962f92a09320_add_jsonb_payloads_to_encounters_table.py  a1b2c3d4e5f6_add_outcome_tracking_fields.py  aa60cfa62c90_add_full_name_hash_to_patients.py  b2c3d4e5f6a7_add_derived_classifications.py  c032f4bc73dc_add_agreement_rate_to_encounter.py  c3d4e5f6a7b8_add_patient_conditions.py  c806a0d6c2f5_add_decision_audit_log.py  f3b30c7fbb81_initial_baseline.py
apps/backend/scratch/: verify_hashes.py
apps/backend/scripts/: backfill_eav_to_jsonb.py  batch_update_confidence.py  run_stress_test_extreme.py  run_synthetic_patient.py
apps/backend/src/: config.py  database.py  init_db.py  init_security_db.py  logging_config.py  main.py
apps/backend/src/api/: deps.py
apps/backend/src/api/v1/: api.py
apps/backend/src/data/: drug_interactions.db  drug_interactions.sql
apps/backend/src/domain/: calculators.py  models.py
apps/backend/src/engines/: acosta.py  base.py  base_models.py  c_state.py  calculators.py  confidence_standards.py  core_decisions.py  domain.py  eoss.py  metabolic.py  obesity_master.py  protein_engine.py  risk.py  sarcopenia.py  specialty_runner.py  task.md
apps/backend/src/engines/specialty/: a_taxonomy.py  ace_integration.py  anthropometry.py  aom_eligibility.py  apob_ratio.py  b_domains.py  bio_age.py  body_comp_trend.py  c_trajectory.py  cancer_screening.py  cardiometabolic.py  charlson.py  cmds.py  cvd_reclassifier.py  drug_interaction.py  drug_knowledge.py  endocrine.py  fatty_liver.py  free_testosterone.py  fried_frailty.py  functional_sarcopenia.py  glp1_monitor.py  glp1_titration.py  guidelines.py  hemodynamics.py  hypertension.py  inflammation.py  kfre.py  lab_suggestion.py  lifestyle.py  lipid_risk.py  mens_health.py  metabolic.py  metabolomics.py  metformin_b12.py  nafld_fibrosis.py  pediatric_nutrition.py  pharma.py  pharma_precision.py  pharmacogenomics.py  (+11 more)
apps/backend/src/fhir/: bundle_generator.py  concept_map.py  profile.py  resources.py  validator.py
apps/backend/src/models/: __init__.py  audit.py  condition.py  consent.py  encounter.py  tenant.py  user.py
apps/backend/src/omop/: cohorts.py  concept_map.py  etl.py  fhir_reverse.py
apps/backend/src/omop/ddl/: migrate.py  omop_cdm_5.4_postgresql.sql
apps/backend/src/pipeline/: __init__.py  dataset_export.py  ingest.py  quality.py
apps/backend/src/schemas/: audit.py  condition.py  consent.py  encounter.py  patient_condition.py  report.py  tenant.py  vital_signs.py
apps/backend/src/services/: ai_analysis_service.py  audit_service.py  auth_service.py  clinical_engine_service.py  encounter_orchestrator.py  extraction_service.py  hybrid_intel_service.py  narrative_service.py  observation_mapper.py  redis_service.py  report_service.py  sanitization_service.py  suggestion_service.py  timeline_service.py  vault_service.py
apps/backend/src/types/: encrypted_string.py
apps/backend/tests/: conftest.py  script_bio_bounds.py  test_audit_override.py  test_audit_trail.py  test_bio_bounds.py  test_derived_classifications.py  test_e2e_integration.py  test_extraction.py  test_forensic_fixes.py  test_full_ignition.py  test_guardrails.py  test_hardening.py  test_mission_4.py  test_mission_5.py  test_mission_6.py  test_mission_6_hybrid.py  test_mission_7.py  test_mission_8_pharmacogenomics.py  test_overrides.py  test_resilience.py  test_scrappy_resilience_v2.py  test_v2_2_engines.py
apps/backend/tests/integration/: test_clinical_pipeline.py  test_clinical_pipeline.py.bak  test_jsonb_pipeline.py
apps/backend/tests/stress/: test_destructive_clinical.py
apps/backend/tests/unit/: test_engine_integrity.py  test_observation_mapper.py
(+189 files in other folders)
