[project]
name = "integrum-backend-v2"
version = "0.1.0"
description = "Integrum V2 Core Clinical Engine (SaMD Class B)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn[standard]==0.39.0",
    "pydantic[email]==2.12.0",
    "pydantic-settings==2.11.0",
    "sqlalchemy[asyncio]==2.0.48",
    "asyncpg==0.31.0",
    "alembic==1.15.1",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.22",
    "httpx==0.28.1",
    "structlog==25.5.0",
    "slowapi==0.1.9",
    "redis[hiredis]==5.2.1",
    "requests==2.32.5",
    "pdfplumber==0.11.8",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.0.0",
    "hypothesis==6.124.4",
    "ruff==0.9.4",
    "mypy==1.14.1",
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that require a running server or database",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/init_security_db.py",
    "src/init_db.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 70
show_missing = true
